syntax = "proto3";

package main;

option go_package = "./";

message Student {
	string firstName = 1;
	string lastName = 2;
	int32 year = 3;
	string section = 4;
	string course = 5;
	string professor = 6;
}

message Issue {
	Student student = 1;
	string labRoom = 2;
	int32 pcNumber = 3;
	string concern = 4;
	string timestamp = 6;
	repeated string issues = 7;
};
